NEWS
****

New in 1.1.0:

  * Add -a, --all to print outgoing changes on any branch.

New in 1.0.0:

  * Check whether a repository has changesets to push.
  * List the changesets to push.
  * Detect whether a branch has no remote configured.
  * Detect whether HEAD is detached